# OOPtrain

./: .gitignore  CMakeLists.txt  README.md
docs/: myvec.md  myvec2.md  pre.md
include/: myvec.h
scripts/: grade-bst.sh  grade-myvec.sh  update.sh
src/: CMakeLists.txt  myvec.cpp
tests/: CMakeLists.txt  bst_tests.cpp  gt_bst.cpp  gt_bst.h  myvec_tests.cpp  test.h
